--- a/css/styles.css
+++ b/css/styles.css
@@ -628,6 +628,10 @@ button {
   align-items: baseline;
 }
 
+.footer-contacts-wrapper {
+  flex-grow: 1;
+}
+
 .footer-logo-word {
   color: var(--white-color);
 }
@@ -836,13 +840,13 @@ color: var(--white-color);
 }
 
 .modal-text {
-  padding-bottom: 12px;
-font-weight: 700;
-font-size: 20px;
-line-height: 1.15;
-text-align: center;
-letter-spacing: 0.03em;
-color: var(--head-color);
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--head-color);
 }
 
 .modal-form-desc {
@@ -858,6 +862,9 @@ color: var(--head-color);
   position: relative;
 }
 
+.modal-label {
+  margin-bottom: 10px;
+}
 
 .modal-input {
   padding: 12px 42px;
@@ -865,7 +872,6 @@ color: var(--head-color);
   height: 40px;
   border: 1px solid var(--modal-input-border);
   border-radius: 4px;
-  margin-bottom: 10px;
   transition: border-color var(--transition-dur-n-fuc);
 }
 
@@ -886,14 +892,18 @@ color: var(--head-color);
   border-color: var(--accent-color);
 }
 
+.modal-comment-label {
+  margin-bottom: 20px;
+}
+
 .comment-modal {
+  display: block;
   padding: 12px 16px;
   width: 100%;
   height: 120px;
   resize: none;
   border: 1px solid var(--modal-input-border);
   border-radius: 4px;
-  margin-bottom: 20px;
   transition: border-color var(--transition-dur-n-fuc);
 }
 
@@ -943,26 +953,25 @@ color: var(--head-color);
   color: var(--accent-color);
 }
 
-
 .modal-form-submit {
-min-width: 200px;
-padding-top: 10px;
-padding-bottom: 10px;
-padding-left: 52px;
-padding-right: 52px;
-border: none;
-border-radius: 4px;
-align-self: center;
-font-family: inherit;
-font-weight: 700;
-font-size: 16px;
-line-height: 1.87;
-letter-spacing: 0.06em;
-cursor: pointer;
-color: var(--white-color);
-background-color: var(--accent-color);
-box-shadow: var(--modal-submit-shadow)
-transition: background-color var(--transition-dur-n-fuc);
+  min-width: 200px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 52px;
+  padding-right: 52px;
+  border: none;
+  border-radius: 4px;
+  align-self: center;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+  color: var(--white-color);
+  background-color: var(--accent-color);
+  box-shadow: var(--modal-submit-shadow)
+  transition: background-color var(--transition-dur-n-fuc);
 }
 
 .modal-form-submit:focus,
